Refactor Starters (#453)